force-app/main/default/objects/blng__AgingBuckets__c/blng__AgingBuckets__c.object-meta.xml
<CustomObject>
    <label>Aging Buckets</label>
    <nameField>
        <label>Aging Buckets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aging Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>