force-app/main/default/objects/blng__AgingBuckets__c/fields/blng__Active__c.field-meta.xml
<CustomField>
    <fullName>blng__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>