force-app/main/default/objects/blng__AgingBuckets__c/fields/blng__BucketNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__BucketNumber__c</fullName>
    <label>Bucket Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>