force-app/main/default/objects/blng__AgingBuckets__c/fields/blng__Notes__c.field-meta.xml
<CustomField>
    <fullName>blng__Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>