force-app/main/default/objects/blng__AgingBuckets__c/fields/blng__StartingDaysfromPastDue__c.field-meta.xml
<CustomField>
    <fullName>blng__StartingDaysfromPastDue__c</fullName>
    <label>Starting Days from Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>